--- a/client-app/django_app/django_app/templates/event.html
+++ b/client-app/django_app/django_app/templates/event.html
@@ -1,22 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Event Page</title>
-</head>
-<body>
-  <h1> Event Page </h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Event Page</title>
+  </head>
+  <body>
+    <h1>Event Page</h1>
 
-  <div style="margin-bottom: 5px; ">
-    <a style="text-decoration: none;" href="/client">
-      <button>Client Page</button>
-    </a>
-    <a style="text-decoration: none;" href="/booking">
-      <button>Booking Page</button>
-    </a>
-  </div>
+    <div style="margin-bottom: 5px">
+      <a style="text-decoration: none" href="/client">
+        <button>Client Page</button>
+      </a>
+      <a style="text-decoration: none" href="/booking">
+        <button>Booking Page</button>
+      </a>
+    </div>
 
-  <h2> List of Events</h2>
-</body>
+    <h2>List of Events</h2>
+    <div>
+      {% if events %}
+      <table>
+        <thead>
+          <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Date</th>
+            <th>Total Seat</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for event in events %}
+          <tr>
+            <td>{{ event.event_id }}</td>
+            <td>{{ event.event_name }}</td>
+            <td>{{ event.event_date }}</td>
+            <td>{{ event.total_seat }}</td>
+            <td>
+              <a href="event/{{event.event_id}}">
+                <button>Go to Event Detail</button>
+              </a>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      {% else %}
+      <p>No Events Available</p>
+      {% endif %}
+    </div>
+  </body>
 </html>
